--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,12 @@ env:
   - TEST_HIREDIS=1
 install:
   - pip install -e .
-  - "if [[ $TEST_PEP8 == '1' ]]; then pip install pep8; fi"
+  - "if [[ $TEST_PYCODESTYLE == '1' ]]; then pip install pycodestyle; fi"
   - "if [[ $TEST_HIREDIS == '1' ]]; then pip install hiredis; fi"
-script: "if [[ $TEST_PEP8 == '1' ]]; then pep8 --repeat --show-source --exclude=.venv,.tox,dist,docs,build,*.egg .; else python setup.py test; fi"
+script: "if [[ $TEST_PYCODESTYLE == '1' ]]; then pycodestyle --repeat --show-source --exclude=.venv,.tox,dist,docs,build,*.egg .; else python setup.py test; fi"
 matrix:
   include:
     - python: "2.7"
-      env: TEST_PEP8=1
+      env: TEST_PYCODESTYLE=1
     - python: "3.6"
-      env: TEST_PEP8=1
+      env: TEST_PYCODESTYLE=1
